--- a/css/styles.css
+++ b/css/styles.css
@@ -439,6 +439,54 @@ section {
 /***********************
      || PORTFOLIO ||
 ************************/
+#slider {
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 640px;
+    overflow: hidden;
+}
+
+.slider-circle {
+    position: absolute;
+    background-color: #464355;
+    padding: 5px 1rem 0 1rem;
+    text-align: center;
+    width: 100%;
+    bottom: 0;
+}
+
+.slider-circle .circle {
+    cursor: pointer;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+    display: inline-block;
+    margin: 0 6px;
+}
+
+
+
+#slider > .slider__item {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#slider > .slider__item {
+    right: -100%;
+}
+
+.main-slider {
+    right: 0 !important;
+}
+
+.main-circle {
+    background-color: #a9a8af !important;
+}
+
 .portfolio-container {
     display: flex;
     flex-direction: column;
